--- a/src/main/resources/serviceconfig/olat.properties
+++ b/src/main/resources/serviceconfig/olat.properties
@@ -1156,8 +1156,8 @@ ldap.learningResourceManagerRoleValue=
 # Build properties
 #####
 application.name=OpenOLAT
-build.version=12.3a
-build.identifier=openolat123a-dev
+build.version=12.3.0
+build.identifier=openolat1230-dev
 build.repo.revision=local-devel
 
 #####
