no-jira: set version 12.4a

--- a/src/main/resources/serviceconfig/olat.properties
+++ b/src/main/resources/serviceconfig/olat.properties
@@ -1156,8 +1156,8 @@ ldap.learningResourceManagerRoleValue=
 # Build properties
 #####
 application.name=OpenOLAT
-build.version=12.3.0
-build.identifier=openolat1230-dev
+build.version=12.4a
+build.identifier=openolat124a-dev
 build.repo.revision=local-devel
 
 #####
