OO-3181: Evaluation form elemnent for file upload

--- a/src/main/resources/serviceconfig/olat.properties
+++ b/src/main/resources/serviceconfig/olat.properties
@@ -1286,6 +1286,14 @@ portfolio.map.styles.values=default,comic,leather,epmst-green,epmst-blue,epmst-r
 #offer a list of all maps shared to public. Don't enable if > 500 public maps exist! The maps can still be viewed by opening a users vcard.
 portfolio.offer.public.map.list=true
 
+
+########################################
+# Options for evaluation
+########################################
+
+# Possible file size limitations (in MB) in the file upload element of an evaluation form
+forms.file.upload.limit.mb=5,10,20,50
+
 ########################################
 # Options for Virtual Classrooms
 ########################################
