--- a/pom.xml
+++ b/pom.xml
@@ -1932,8 +1932,8 @@
 		<dependency>
 			<groupId>fmath</groupId>
 			<artifactId>fmath-latex-mathml</artifactId>
-			<version>0.5</version>
-			<!--  need org.jdom 1.1.3, jaxen 1.1.4 and commons-codec -->
+			<version>3.1</version>
+			<!-- need org.jdom2 2.0.6 -->
 		</dependency>
 		<dependency>
 			<groupId>jgrapht</groupId>
