--- a/src/test/profile/mysql/olat.local.properties
+++ b/src/test/profile/mysql/olat.local.properties
@@ -77,3 +77,8 @@ group.accept.membership.administrators=false
 
 #make sure the test for QTI 1.2 works
 qti12.create.resources.enabled=true
+
+#security
+base.security.frameOptionsSameOrigine=enabled
+base.security.strictTransportSecurity=enabled
+base.security.xContentTypeOptions=enabled
