--- a/src/main/webapp-tomcat/WEB-INF/web.xml
+++ b/src/main/webapp-tomcat/WEB-INF/web.xml
@@ -42,6 +42,11 @@
 		<filter-class>org.olat.restapi.security.RestApiLoginFilter</filter-class>
 	</filter>
 	
+	<filter>
+		<filter-name>HeadersFilter</filter-name>
+		<filter-class>org.olat.core.servlets.HeadersFilter</filter-class>
+	</filter>
+	
 	<!-- The mapping to the Login filter REST API -->
 	<filter-mapping>
 		<filter-name>PaypalIPNFilter</filter-name>
@@ -51,6 +56,11 @@
 	<filter-mapping>
 		<filter-name>RESTApiLoginFilter</filter-name>
 		<url-pattern>/restapi/*</url-pattern>
+	</filter-mapping>
+	
+	<filter-mapping>
+		<filter-name>HeadersFilter</filter-name>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
 	<!-- 3. Listeners -->
