OO-3352: add option to enable "Content-Security-Policy" with specific configuration for 10 directives

--- a/src/test/profile/mysql/olat.local.properties
+++ b/src/test/profile/mysql/olat.local.properties
@@ -82,3 +82,5 @@ qti12.create.resources.enabled=true
 base.security.frameOptionsSameOrigine=enabled
 base.security.strictTransportSecurity=enabled
 base.security.xContentTypeOptions=enabled
+base.security.contentSecurityPolicy=enabled
+
