--- a/src/test/profile/postgresql/olat.local.properties
+++ b/src/test/profile/postgresql/olat.local.properties
@@ -83,3 +83,4 @@ qti12.create.resources.enabled=true
 base.security.frameOptionsSameOrigine=enabled
 base.security.strictTransportSecurity=enabled
 base.security.xContentTypeOptions=enabled
+base.security.contentSecurityPolicy=enabled
