--- a/src/test/profile/mysql/olat.local.properties
+++ b/src/test/profile/mysql/olat.local.properties
@@ -83,4 +83,5 @@ base.security.frameOptionsSameOrigine=enabled
 base.security.strictTransportSecurity=enabled
 base.security.xContentTypeOptions=enabled
 base.security.contentSecurityPolicy=enabled
+base.security.contentSecurityPolicy.frameSrc=http://lti.frentix.com
 
