OO-3283: consolidate packages of RSS feed util and servlet for notifications, add and fix some missing i18n keys for notifications

--- a/src/main/webapp-tomcat/WEB-INF/web.xml
+++ b/src/main/webapp-tomcat/WEB-INF/web.xml
@@ -142,7 +142,7 @@
 	<!-- RSS feed requests -->
 	<servlet>
 		<servlet-name>rss</servlet-name>
-		<servlet-class>org.olat.commons.servlets.RSSServlet</servlet-class>
+		<servlet-class>org.olat.core.commons.services.notifications.PersonalRSSServlet</servlet-class>
 		<load-on-startup>3</load-on-startup>
 	</servlet>	
 
