--- a/src/main/resources/serviceconfig/olat.properties
+++ b/src/main/resources/serviceconfig/olat.properties
@@ -171,8 +171,10 @@ registration.enableNotificationEmail=false
 registration.notificationEmail=${adminemail}
 # ask user to accept a disclaimer at first login. Use i18n tool to customize disclaimer message
 registration.enableDisclaimer=true
-# add a second checkbox to the disclaimer
+# add a second checkbox to the disclaimer, e.g. for a privacy statement
 registration.disclaimerAdditionalCheckbox=false
+# add a third checkbox to the disclaimer, e.g. for the terms of use
+registration.disclaimerAdditionalCheckbox2=false
 # add a link to the disclaimer with a file download
 # if set to true you can add downloadable disclaimer files in olatdata/customizing/disclaimer/
 # the names of the files can be configured in the i18n key org.olat.registration:disclaimer.filedownloadurl
