no-jira: set version 12.4.0

--- a/src/main/resources/serviceconfig/olat.properties
+++ b/src/main/resources/serviceconfig/olat.properties
@@ -1120,8 +1120,8 @@ ldap.learningResourceManagerRoleValue=
 # Build properties
 #####
 application.name=OpenOLAT
-build.version=12.4a
-build.identifier=openolat124a-dev
+build.version=12.4.0
+build.identifier=openolat1240-dev
 build.repo.revision=local-devel
 
 #####
