OO-3417: implements a password policy with max. age

--- a/src/main/resources/serviceconfig/olat.properties
+++ b/src/main/resources/serviceconfig/olat.properties
@@ -210,6 +210,16 @@ login.using.username.or.email.enabled=true
 # permit users to change their own passwords
 # (if you set this to false, nobody can can change their pws!)
 password.change.allowed=true
+
+# Password ageing policy
+password.max.age=0
+password.max.age.author=${password.max.age}
+password.max.age.groupmanager=${password.max.age}
+password.max.age.poolmanager=${password.max.age}
+password.max.age.usermanager=${password.max.age}
+password.max.age.learnresourcemanager=${password.max.age}
+password.max.age.administrator=${password.max.age}
+
 # default deletion behavior is to retain details (marked as deleted) and
 # ensure they cannot be used, otherwise (if false) values will be replaced
 # by yyyyMMddHHss_bkp_<originalValue>
